# cap-5602-ai

./: .gitignore  README.md  homework1.ipynb  pyproject.toml
cap_5602_ai/: assignment-0.py  assignment-1.py
graded_notebooks/: corderomichael_graded_hw1.ipynb  corderomichael_graded_hw2.ipynb  corderomichael_graded_hw3.ipynb  corderomichael_graded_hw4.ipynb
homework_notebooks/: homework1.ipynb  homework2.ipynb  homework3.ipynb  homework4.ipynb
homework_solutions_notebooks/: homework1_solution.ipynb  homework2_solution.ipynb  homework3_solution.ipynb  homework4_solution.ipynb
lecture_notebooks/: cap5602_lect10_mlp_keras.ipynb  cap5602_lect11_image_classification.ipynb  cap5602_lect12_cnn.ipynb  cap5602_lect14_text_classification.ipynb  cap5602_lect2_python.ipynb  cap5602_lect3_numpy.ipynb  cap5602_lect4_decision-trees.ipynb  cap5602_lect5_knn.ipynb  cap5602_lect6_svm.ipynb  cap5602_lect7_linear_regression.ipynb  cap5602_lect8_linear_classification.ipynb  cap5602_lect9_multilayer_perceptron.ipynb
tests/: test_cap_5602_ai.py
