[tool.poetry]
name = "cap-5602-ai"
version = "0.1.0"
description = ""
authors = ["michaelcordero <michaelpetercordero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numpy = "^1.23.2"
sympy = "^1.11.1"
scipy = "^1.9.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
